--- a/src/App/views/portal-admin/editBeachResort.view.twig
+++ b/src/App/views/portal-admin/editBeachResort.view.twig
@@ -55,9 +55,9 @@
         <input type="hidden" id="latitud" name="latitud" value="{{ beachResort.fields.lat }}">
 
         <label id="lbStreet" for="street">Calle:</label>
-        <input type="text" id="street" name="street" required value="{{ beachResort.fields.street }}">
+        <input type="text" id="street" name="street" value="{{ beachResort.fields.street }}">
         <label id="lbNumber" for="number">Numero:</label>
-        <input type="text" id="number" name="number" required value="{{ beachResort.fields.number }}">
+        <input type="text" id="number" name="number" value="{{ beachResort.fields.number }}">
         <section class="conteinerBtnLocalizar">
             <button type='button' id="btnLocalizar" class="btnLocalizar">Localizar</button>
         </section>
