--- a/src/App/views/portal-admin/newBeachResort.view.twig
+++ b/src/App/views/portal-admin/newBeachResort.view.twig
@@ -76,9 +76,9 @@
         <input type="hidden" id="latitud" name="latitud" value="0">
 
         <label style="display:none;" id="lbStreet" for="street">Calle:</label>
-        <input style="display:none;" type="text" id="street" name="street" required>
+        <input style="display:none;" type="text" id="street" name="street">
         <label style="display:none;" id="lbNumber" for="number">Numero:</label>
-        <input style="display:none;" type="text" id="number" name="number" required>
+        <input style="display:none;" type="text" id="number" name="number">
         <section class="conteinerBtnLocalizar">
             <button type='button' style="display:none;" id="btnLocalizar" class="btnLocalizar">Localizar</button>
         </section>
