--- a/src/App/views/parts/footer.view.twig
+++ b/src/App/views/parts/footer.view.twig
@@ -1,10 +1,10 @@
 <footer>
     <div class="footer-content">
-        <h3>Contacto y Enlaces</h3>
+        <h3>Contacto y enlaces</h3>
         <ul>
-            <li><a href="/about">Sobre Nosotros</a></li>
-            <li><a href="/privacyPolicies">Política de Privacidad</a></li>
-            <li><a href="/termsOfServices">Términos de Servicio</a></li>
+            <li><a href="/about">Sobre nosotros</a></li>
+            <li><a href="/privacyPolicies">Política de privacidad</a></li>
+            <li><a href="/termsOfServices">Términos de servicio</a></li>
             <li><a href="/contact">Contacto</a></li>
         </ul>
         <div class="social-media">
