--- a/src/App/views/portal-user/contact.view.twig
+++ b/src/App/views/portal-user/contact.view.twig
@@ -10,7 +10,7 @@
                 <label for="name">Nombre:</label>
                 <input type="text" id="name" name="name" required>
 
-                <label for="email">Correo Electrónico:</label>
+                <label for="email">Correo electrónico:</label>
                 <input type="email" id="email" name="email" required>
 
                 <label for="message">Mensaje:</label>
@@ -19,7 +19,7 @@
                 <button type="submit">Enviar</button>
             </form>
 
-            <h3>Información de Contacto</h3>
+            <h3>Información de contacto</h3>
             <p>Teléfono: +123456789</p>
             <p>Email: contacto@tents.com</p>
         </section>    
