--- a/src/App/views/portal-user/privacyPolicies.view.twig
+++ b/src/App/views/portal-user/privacyPolicies.view.twig
@@ -2,16 +2,16 @@
 
 {% block main %}
         <section class="privacy-policy">
-            <h2>Información que Recopilamos</h2>
+            <h2>Información que recopilamos</h2>
             <p>Recopilamos información personal que nos proporcionas al registrarte en nuestro sitio web, realizar una compra o ponerte en contacto con nosotros.</p>
 
-            <h2>Cómo Usamos Tu Información</h2>
+            <h2>Cómo usamos tu información</h2>
             <p>Utilizamos tu información para procesar tus pedidos, mejorar nuestros servicios y mantenerte informado sobre nuestras ofertas y novedades.</p>
 
-            <h2>Protección de Datos</h2>
+            <h2>Protección de datos</h2>
             <p>Tomamos medidas adecuadas para proteger tus datos personales contra el acceso no autorizado, la divulgación, la alteración y la destrucción.</p>
 
-            <h2>Tus Derechos</h2>
+            <h2>Tus derechos</h2>
             <p>Tienes el derecho de acceder, corregir o eliminar tus datos personales. Para ejercer estos derechos, por favor, contáctanos.</p>
         </section>
 {% endblock %}
