--- a/src/App/views/portal-user/beachResort.view.twig
+++ b/src/App/views/portal-user/beachResort.view.twig
@@ -28,6 +28,7 @@
                 <object  type="image/svg+xml" data="./../imagenes/beachResorts/svgs/{{ beachResort.fields.name }}.svg" id="svgImage"></object>
 
                 <p id="lastUnit"></p>
+                <label id="precio_total">Precio total:</label>
                 <p id="ticket"></p>
 
                 <input type="hidden" id="selectedUnits" name="selectedUnits" value="" />
