--- a/src/App/views/portal-admin/adminBeachResor.view.twig
+++ b/src/App/views/portal-admin/adminBeachResor.view.twig
@@ -42,6 +42,8 @@
         </span>   
 {% endblock %}
 
+{% block footer %}{% endblock %}
+
 {% block javascript %}
         <script>        
                 function confirmar(text, route, id) {
