--- a/src/App/views/portal-user/contact.view.twig
+++ b/src/App/views/portal-user/contact.view.twig
@@ -19,6 +19,12 @@
                 <button type="submit">Enviar</button>
             </form>
 
+            {% if mensaje %}
+                <div class="message">
+                    {{ mensaje }}
+                </div>
+            {% endif %}
+
             <h3>Información de contacto</h3>
             <p>Teléfono: +123456789</p>
             <p>Email: contacto@tents.com</p>
