Mejora responsive general del sitio

--- a/src/App/views/parts/footer.view.twig
+++ b/src/App/views/parts/footer.view.twig
@@ -9,7 +9,7 @@
         </ul>
         <div class="social-media">
             <a class="facebook" href="#" class="facebook"><i class="fa-brands fa-facebook"></i> Facebook</a>
-            <a class="phone" href="#"><i class="fa-solid fa-phone"></i> +123456789</a>
+            <a class="phone" href="tel:+5492346123456"><i class="fa-solid fa-phone"></i> 2346-123456</a>
             <a class="instagram" href="#" class="instagram"><i class="fa-brands fa-instagram"></i> Instagram</a>
         </div>
     </div>
