--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -21,24 +21,20 @@
 
 }
 
+header {
+  background-color: rgba(0, 0, 0, 0.75);
+  margin-bottom: 20px;
+}
+
 .hamburguesa {
   display: none;
 }
 
-.hambur h2 {
-  display: none;
-}
-
 body {
-    margin: 0;
     font-family: Arial, sans-serif;
     /* background: var(--background-light); */
     color: #333;
     line-height: 1.6;
-    /*background-image: url('./../imagenes/background.jpg'); */
-    background-size: cover; /* Para cubrir todo el fondo */
-    background-position: center; /* Centrar la imagen */
-    background-repeat: no-repeat; /* Evitar que se repita la imagen */
 }
 
 header > figure {
@@ -49,13 +45,6 @@ header > figure {
 header > figure > img {
     width: 100%;
     display: block;
-}
-
-nav {
-  display: flex;
-  background-color: rgba(0, 0, 0, 0.75);
-  top: 0;
-  z-index: 9999;
 }
 
 .btnLocalizar {
@@ -78,10 +67,6 @@ nav ul {
   padding: 0;
   display: flex; /* Hacer que los elementos de la lista se distribuyan como una fila */
   align-items: center; /* Alinear verticalmente los elementos */
-}
-
-nav ul li {
-  margin-right: 20px;
 }
 
 .logo-item {
@@ -172,7 +157,6 @@ nav ul li a:hover {
   margin-top: 5px;
   border: 1px solid #ddd;
   border-radius: 4px;
-  width: 100%;
 }
 
 .contact textarea {
@@ -193,16 +177,13 @@ nav ul li a:hover {
   background-color: #004d99;
 }
 
-.ciudad-container {
-  position: relative;
-}
-
 /* Hero Section */
 .hero {
   background: #f7f7f7; /* Color de fondo claro */
   color: #333; /* Color de texto oscuro para buen contraste */
   text-align: center;
   padding: 50px 20px; /* Ajusta el padding según el diseño */
+  padding-top: 30px;
   justify-content: center;
   align-items: center;
 }
@@ -266,7 +247,7 @@ nav ul li a:hover {
   border: 2px solid #007bff;
   border-top: none;
   position: absolute;
-  width: calc(100% - 4px);
+  width: 234px;
   max-height: 180px;
   overflow-y: auto;
   z-index: 1000;
@@ -307,7 +288,6 @@ nav ul li a:hover {
   background-color: #f9f9f9;
   border-radius: 12px;
   text-align: center;
-  margin-bottom: 60px;
 }
 
 .reservar-pasos .titulo {
@@ -320,8 +300,14 @@ nav ul li a:hover {
   font-size: 2.5rem;
   color: #333;
   font-weight: 700;
-  margin: 0;
   text-align: center;
+}
+
+.reservar-pasos > section,
+.card-container > section {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .pasos-container {
@@ -392,7 +378,6 @@ h3{
   padding: 40px 20px;
   background-color: #f4f4f4;
   border-radius: 12px;
-  margin-bottom: 60px;
 }
 
 /* Estilo para el título de la sección */
@@ -406,7 +391,7 @@ h3{
   font-size: 2.5rem;
   color: #333;
   font-weight: 700;
-  margin: 0;
+  text-align: center;
 }
 
 /* Contenedor de las tarjetas de testimonios */
@@ -426,6 +411,7 @@ h3{
   text-align: center;
   max-width: 600px;
   margin: 0 auto;
+  margin-top: 8px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
@@ -487,10 +473,12 @@ p, ol {
 h1, h2{
   font-family: "Abril Fatface", serif;
 	font-size: var(--section-title-size);
-	text-align: left;
-	padding-left: 4rem;
-	color: #E5992B;
 	text-shadow: 1px 1px 2px var(--text-shadow);
+}
+
+section > h2 {
+  font-size: 40px;
+  text-align: center;
 }
 
 .parrafo {
@@ -555,7 +543,7 @@ h1, h2{
   font-size: 2.5rem;
   color: #333;
   font-weight: 700;
-  margin: 0;
+  text-align: center;
 }
 
 /* Contenedor principal para las tarjetas de ciudades */
@@ -563,18 +551,12 @@ h1, h2{
   padding: 40px 20px;
   background-color: #f4f4f4;
   border-radius: 12px;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: center;
 }
 
 /* Estilo para cada enlace de tarjeta */
 .card-container .card-link {
   text-decoration: none;
   color: inherit;
-  max-width: calc(25% - 20px);
-  box-sizing: border-box;
 }
 
 /* Estilo para cada tarjeta */
@@ -643,7 +625,6 @@ form input[type="tel"],
 form textarea,
 form select,
 form input[type="file"] {
-    width: 100%;
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -709,14 +690,7 @@ footer {
   text-align: center;
   padding-top: 20px;
   padding-bottom: 20px;
-  position: absolute;
-  width: 100%;
   box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
-}
-
-footer .footer-content {
-  max-width: 1200px;
-  margin: 0 auto;
 }
 
 footer h3 {
@@ -727,12 +701,10 @@ footer h3 {
 
 footer ul {
   list-style: none;
-  padding: 0;
-  margin: 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;
+  gap: 16px;
 }
 
 footer li {
@@ -747,14 +719,15 @@ footer a {
 }
 
 footer a:hover {
-  color: #ddd;
+  color: #007bff;
 }
 
 .social-media {
   display: flex;
   justify-content: center;
+  margin-top: 24px;
+  margin-bottom: 12px;
   gap: 20px;
-  margin: 20px 0;
 }
 
 .social-media a {
@@ -769,8 +742,6 @@ footer a:hover {
 .footer-bottom {
   border-top: 1px solid #444;
   padding-top: 20px;
-  font-size: 0.875rem;
-  color: #bbb;
 }
 
 footer p {
@@ -794,12 +765,10 @@ footer p {
 
  .reserva {
   display: flex;
-  margin-right: 2em;
   justify-content: center;
-  position: absolute;
-  right: 0;
-  margin-top: 2rem;
-  gap: 1.5rem;
+  margin-top: 8px;
+  margin-right: 8px;
+  gap: 1rem;
   align-items: center;
 }
 
@@ -831,6 +800,7 @@ footer p {
   font-size: 2rem; /* Tamaño de fuente para el título del balneario */
   font-weight: bold; /* Negrita para el título */
   margin-bottom: 1rem; /* Espacio debajo del título */
+  margin-left: 32px;
   color: #2c3e50; /* Color del texto del título */
 }
 
@@ -986,34 +956,12 @@ footer p {
     fill:red
   }
 
-/* Contenedor del input y la lista */
-.ciudad-container {
-  position: relative;
-}
-
 /* Estilos para el campo de búsqueda de ciudades */
 .selectCiudades {
   padding: 10px;
   border-radius: 5px;
   border: 1px solid #ccc;
   box-sizing: border-box;
-}
-
-/* Estilos para la lista de opciones de ciudades */
-.cities-list {
-  position: absolute;
-  top: 100%; /* Coloca la lista justo debajo del input */
-  left: 0;
-  width: 100%;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  background-color: #fff;
-  max-height: 200px;
-  overflow-y: auto;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  z-index: 1000;
-  margin-top: 5px; /* Espacio entre el input y la lista */
-  display: none; /* Inicialmente oculta la lista */
 }
 
 /* Estilos para cada opción en la lista */
@@ -1082,7 +1030,6 @@ article {
   margin: 1em;
   padding: 2em;
   width: 13em;
-  height: 13em; 
   text-align: center;
   transition: transform 0.2s;
   overflow: hidden; 
@@ -1095,7 +1042,7 @@ article:hover {
 
 article img {
   width: 100%;
-  height: auto;
+  height: 100%;
   display: block;
   border-radius: 5px;
 }
@@ -1108,33 +1055,10 @@ section a {
   text-decoration: none;
 }
 
-@media (max-width: 768px) {
-    body {
-        padding: 10px;
-    }
-
-    nav ul li {
-        display: block;
-        margin-bottom: 10px;
-    }
-
-    h1 {
-        font-size: 2.5rem;
-    }
-
-    h2 {
-        font-size: 2rem;
-    }
-
-    .parrafo {
-        margin-left: 0;
-        margin-right: 0;
-    }
-}
-
 /* Oculta por defecto la imagen SVG en las reservas */
 #svgImage {
   display: none;
+  width: 100%;
 }
 
 /* Elemento "cargando" */
@@ -1152,209 +1076,6 @@ section a {
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
-}
-
-/*MEDIA MAX-WIDTH 832px-----------------*/
-@media screen and (max-width: 832px) {
-  
-  /* Estilos para el menú hamburguesa */
-  
-  .hambur {
-    position: relative;
-    height: 2.1rem;
-  }
-  
-  .hambur > h2 {
-    position: relative;
-    display: inline;
-    font-size: 1.6rem;
-    left: 1rem;
-  }
-  
-  .hamburguesa {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 2.5rem;
-    height: auto;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-  }
-  
-  
-  .hamburguesa span {
-    width: 30px;
-    height: 3px;
-    background-color: #000;
-    transition: all 0.3s ease-in-out;
-    margin: 4px 0; /* Añade un margen vertical */
-  }
-
-  /*navegación principal del sitio*/
-  .menu {
-    display: none;
-    left: 0;
-    width: 100%;
-    z-index: 999;
-    overflow: hidden;
-    height: auto;
-  }
-  
-  .menu.show {
-    display: block;
-    transition: all 0.3s ease-in-out;
-    margin-top:.5rem;
-  }
-  
-  .menu ul {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    left: auto;
-  }
-  
-  /* .menu li:not(:last-child) {
-    border-bottom: 0.2rem white solid;
-  } */
-  
-  .menu li, .menu a {
-    /* background-color: rgb(238, 241, 239); */
-    position: relative;
-    padding: 0.5rem;
-    margin: 0;
-    border: none;
-  }
-  
-  /* .menu li {
-    background-color: rgb(2,82,85);
-  } */
-  
-  .menu li a {
-    display: inline-block;
-    text-decoration: none;
-    color: white;
-    font-size: 18px;
-  }
-  
-  .menu li a:hover {
-    background-color: #007bff;
-  }
-  
-  .menu li a p:hover {
-    color: white;
-  }
-  
-  .menu li a:hover {
-    color: white;
-  }
-  
-  .menu li a i{
-    margin-right: 10px;
-  }
-  
-  #desplegable1, #desplegable2 {
-    color: white;
-    margin: 0 1rem;
-  }
-  
-  .menu .dropdown-menu{
-      display: none;
-      left: 0;
-      width: 100%;
-      background-color: rgb(2,82,85);
-      z-index: 999;
-      overflow: hidden;
-      height: auto;
-      transition: all 0.3s ease-in-out;
-    }
-    
-    .menu .dropdown-menu li {
-      margin: 10px 0;
-      text-align: center;
-      height: 2rem;
-    }
-    
-    .menu .dropdown-menu li a {
-      text-decoration: none;
-      color: white;
-      font-size: 18px;
-      margin-top: 0px;
-      margin-bottom: 0px;
-    }
-    
-    .menu .dropdown-menu li p {
-      text-decoration: none;
-      color: rgb(2,82,85);
-      font-size: 18px;
-      margin-top: 0px;
-      margin-bottom: 0px;
-    }
-  
-  .menu .sub-menu {
-      top: 0;
-      margin-top: -1px;
-      margin-left: 0;
-    }
-    
-    .menu .dropdown-menu.mostrar {
-      display: block;
-      margin-top: 0rem;
-      max-height: 500px;
-      transition: all 0.3s ease-in-out;
-      padding: 0;
-      margin: 0;
-      list-style: none;
-      flex-direction: column;
-    }
-    
-    .icono {
-      width: 50vw;
-    }
-
-    article {
-      display: block;
-      margin: auto;
-      text-align: center;
-    }
-
-    h2 {
-      text-align: center;
-      padding: 0;
-    }
-    
-} /*END MEDIA MAX-WIDTH 832px*/
-
-/*MEDIA MAX-WIDTH 491px-----------------*/
-@media screen and (max-width: 491px) {
-    
-  body {
-    font-size: 3vw;
-  }
-
-  button {
-    width: min-content;
-  }
-
-  footer ul {
-    width: 50%;
-    text-align: center;  
-  }
-  
-  footer p {
-    width: 50%;
-    text-align: center;
-  }
-  
-  footer a {
-    width: 100%;
-    height: 3rem;
-    text-align: center;
-    margin-top: 0.5rem;
-  }
 }
 
 fieldset{
@@ -1537,4 +1258,216 @@ fieldset p{
 
 .estadisticas > article {
   background-color: #e5f6f6;
+}
+
+header {
+  padding: 8px;
+}
+
+header > a {
+  text-decoration: none;
+}
+
+header img {
+  width: 60px;
+}
+
+.menu {
+  display: flex;
+  width: calc(100% - 72px);
+  float: right;
+  justify-content: space-between;
+}
+
+.centered-cards {
+  display: flex;
+  align-items: stretch;
+  flex-wrap: wrap;
+}
+
+.centered-cards figure {
+  height: 200px;
+}
+
+#reservationForm h2 {
+  font-size: 2rem;
+}
+
+@media screen and (max-width: 767px) {
+  footer ul {
+    flex-direction: column;
+  }
+
+  footer a {
+    height: 3rem;
+    text-align: center;
+    margin-top: 0.5rem;
+  }
+
+  /*navegación principal del sitio*/
+  .menu {
+    display: none;
+    width: 100%;
+    float: none;
+  }
+
+  .menu.show {
+    display: block;
+    transition: all 0.3s ease-in-out;
+    margin: 8px 0;
+  }
+
+  .menu li,
+  .menu a {
+    padding: 0.5rem;
+  }
+
+  .menu li a {
+    font-size: 18px;
+  }
+
+  .menu li a:hover {
+    color: #007bff;
+  }
+
+  .menu > a {
+    padding: 0;
+  }
+
+  .menu ul {
+    flex-direction: column;
+  }
+
+  .hamburguesa {
+    display: flex;
+    flex-direction: column;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    margin-top: 0;
+    box-shadow: none;
+    float: right;
+  }
+
+  .hamburguesa span {
+    width: 30px;
+    height: 3px;
+    background-color: #fff;
+    transition: all 0.3s ease-in-out;
+    margin: 4px 0;
+    /* Añade un margen vertical */
+  }
+
+  .reserva {
+    margin-right: 0;
+  }
+
+  /* Estilos para la lista de opciones de ciudades */
+  .cities-list {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    display: none; /* Inicialmente oculta la lista */
+  }
+
+  .reservar-pasos > section {
+    flex-direction: column;
+  }
+
+  .reservar-pasos article {
+    display: block;
+    margin: 16px auto;
+  }
+
+  .balneario {
+    text-align: center;
+    margin-left: 0;
+  }
+
+  fieldset {
+    padding: 0;
+  }
+
+  #reservationForm input {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  .menu li a p:hover {
+    color: white;
+  }
+
+  .menu li a i {
+    margin-right: 10px;
+  }
+
+  #desplegable1,
+  #desplegable2 {
+    color: white;
+    margin: 0 1rem;
+  }
+
+  .menu .dropdown-menu {
+    display: none;
+    left: 0;
+    width: 100%;
+    background-color: rgb(2, 82, 85);
+    z-index: 999;
+    overflow: hidden;
+    height: auto;
+    transition: all 0.3s ease-in-out;
+  }
+
+  .menu .dropdown-menu li {
+    margin: 10px 0;
+    text-align: center;
+    height: 2rem;
+  }
+
+  .menu .dropdown-menu li a {
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
+  .menu .dropdown-menu li p {
+    text-decoration: none;
+    color: rgb(2, 82, 85);
+    font-size: 18px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
+  .menu .sub-menu {
+    top: 0;
+    margin-top: -1px;
+    margin-left: 0;
+  }
+
+  .menu .dropdown-menu.mostrar {
+    display: block;
+    margin-top: 0rem;
+    max-height: 500px;
+    transition: all 0.3s ease-in-out;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    flex-direction: column;
+  }
+
+  .icono {
+    width: 50vw;
+  }
+
+  h2 {
+    text-align: center;
+    padding: 0;
+  }
+
+  .centered-cards {
+    justify-content: center;
+  }
 }
