--- a/src/App/views/beachResortsCity.view.twig
+++ b/src/App/views/beachResortsCity.view.twig
@@ -7,8 +7,9 @@
             <input type="hidden" id="cityLat" name="cityLat" value="{{ city.fields.lat }}">
             <input type="hidden" id="cityLon" name="cityLon" value="{{ city.fields.lon }}">
 
-            <section style="width:100%; height:300px" class="map" id="map"></section> 
+            <section style="width:100%; height:300px" class="map" id="map"></section>
 
+            <section class="centered-cards">
             {% for beachResort in beachResorts %}
                 <a href="/beachResort?id={{ beachResort.id }}">
                     <article class="card">    
@@ -18,7 +19,8 @@
                         </figure>
                     </article> 
                 </a>
-            {% endfor %}                  
+            {% endfor %}
+            </section>
         </section>
     </main>
 {% endblock %}
