--- a/src/App/views/portal-user/index.view.twig
+++ b/src/App/views/portal-user/index.view.twig
@@ -13,59 +13,59 @@
         </section>
 
         <section class="reservar-pasos">
-            <h1>Cómo realizar una reserva</h1>      
-            <article>
-                <div class="paso-icon">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                </div>
-                <div class="paso-info">
-                    <h3>1. Buscar Balneario</h3>
-                    <p>Utiliza nuestro buscador para encontrar el balneario que mejor se ajuste a tus necesidades.</p>
-                </div>
-            </article>
-            <article>
-                <div class="paso-icon">
-                    <i class="fa-solid fa-umbrella-beach"></i>
-                    <i class="fa-solid fa-tents"></i>
-                </div>
-                <div class="paso-info">
-                    <h3>2. Elegir Carpa o Sombrilla</h3>
-                    <p>Selecciona la carpa o sombrilla que prefieras para tu día de playa.</p>
-                </div>
-            </article>
-            <article>
-                <div class="paso-icon">
-                    <i class="fa-regular fa-credit-card"></i>
-                </div>
-                <div class="paso-info">
-                    <h3>3. Pagar por Mercado Pago</h3>
-                    <p>Realiza el pago a través de Mercado Pago para completar tu reserva.</p>
-                </div>
-            </article>
+            <h2>Cómo realizar una reserva</h2>
+            <section>
+                <article>
+                    <div class="paso-icon">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </div>
+                    <div class="paso-info">
+                        <h3>1. Buscar Balneario</h3>
+                        <p>Utiliza nuestro buscador para encontrar el balneario que mejor se ajuste a tus necesidades.</p>
+                    </div>
+                </article>
+                <article>
+                    <div class="paso-icon">
+                        <i class="fa-solid fa-umbrella-beach"></i>
+                        <i class="fa-solid fa-tents"></i>
+                    </div>
+                    <div class="paso-info">
+                        <h3>2. Elegir Carpa o Sombrilla</h3>
+                        <p>Selecciona la carpa o sombrilla que prefieras para tu día de playa.</p>
+                    </div>
+                </article>
+                <article>
+                    <div class="paso-icon">
+                        <i class="fa-regular fa-credit-card"></i>
+                    </div>
+                    <div class="paso-info">
+                        <h3>3. Pagar por Mercado Pago</h3>
+                        <p>Realiza el pago a través de Mercado Pago para completar tu reserva.</p>
+                    </div>
+                </article>
+            </section>
         </section>
 
         <section class="card-container">
-            <section class="titulo">
-                <h1>Conocé las ciudades y sus balnearios</h1>      
+            <h2>Conocé las ciudades y sus balnearios</h2>
+            <section>
+                {% for city in cities %}
+                    <a href="/beachResortsCity?id={{ city.fields.id }}" class="card-link">
+                        <article class="card">    
+                            <h3>{{ city.fields.name }}</h3>
+                            <figure>
+                                <img src="{{ city.fields.img }}" alt="{{ city.fields.name }}">
+                            </figure>
+                            <p>Balnearios: {{ city.fields.cant_beach_resorts}}</p>
+                        </article> 
+                    </a>
+                {% endfor %}
             </section>
-            {% for city in cities %}
-                <a href="/beachResortsCity?id={{ city.fields.id }}" class="card-link">
-                    <article class="card">    
-                        <h3>{{ city.fields.name }}</h3>
-                        <figure>
-                            <img src="{{ city.fields.img }}" alt="{{ city.fields.name }}">
-                        </figure>
-                        <p>Balnearios: {{ city.fields.cant_beach_resorts}}</p>
-                    </article> 
-                </a>
-            {% endfor %}                  
         </section>
 
 
         <section class="testimonials">
-            <section class="titulo">
-                <h1>Lo que dicen nuestros clientes</h1>
-            </section>
+            <h2>Lo que dicen nuestros clientes</h2>
             <div class="testimonial">
                 <p>"El mejor balneario que hemos visitado. Servicio excelente y vistas espectaculares!"</p>
                 <cite>- Juan Pérez</cite>
