Corrige errores del HTML validados por la W3C

--- a/src/App/views/base.view.twig
+++ b/src/App/views/base.view.twig
@@ -1,6 +1,8 @@
 {% block head %}{{include('parts/head.view.twig')}}{% endblock %}
 <body>
 
+		{% block header %}{{include('parts/header.view.twig')}}{% endblock %}
+
 		{% block styles %}{% endblock %}
 
 		{% block main %}{% endblock %}
