--- a/src/App/views/parts/footer.view.twig
+++ b/src/App/views/parts/footer.view.twig
@@ -8,9 +8,9 @@
             <li><a href="/contact">Contacto</a></li>
         </ul>
         <div class="social-media">
-            <a class="facebook" href="#" class="facebook"><i class="fa-brands fa-facebook"></i> Facebook</a>
+            <a class="facebook" href="#"><i class="fa-brands fa-facebook"></i> Facebook</a>
             <a class="phone" href="tel:+5492346123456"><i class="fa-solid fa-phone"></i> 2346-123456</a>
-            <a class="instagram" href="#" class="instagram"><i class="fa-brands fa-instagram"></i> Instagram</a>
+            <a class="instagram" href="#"><i class="fa-brands fa-instagram"></i> Instagram</a>
         </div>
     </div>
     <div class="footer-bottom">
