--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -152,6 +152,10 @@ nav ul li a:hover {
   font-weight: bold;
 }
 
+input, textarea {
+  width: 100%;
+}
+
 .contact input, .contact textarea {
   padding: 10px;
   margin-top: 5px;
